--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Ennemies/TestEnnemy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/", "res://PlayerRelated/Player/", "res://PlayerRelated/knife/", "res://Ennemies/", "res://Ennemies/BaseEnnemy/", "res://BaseEntity/", "res://BaseEntity/Hitbox/")
+dock_filesystem_selected_paths=PackedStringArray("res://TestScene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/", "res://PlayerRelated/Player/Scripts/", "res://Ennemies/BaseEnnemy/", "res://BaseEntity/Hitbox/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://TestScene.tscn", "res://PlayerRelated/Player.tscn", "res://PlayerRelated/knife/Knife.tscn", "res://Ennemies/TestEnnemy.tscn")
-current_scene="res://Ennemies/TestEnnemy.tscn"
+current_scene="res://PlayerRelated/knife/Knife.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
-selected_script="res://PlayerRelated/Player/Scripts/PlayerMovement.gd"
+open_scripts=["res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd", "res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
+selected_script="res://PlayerRelated/knife/Knife.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
