--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -23,6 +23,9 @@ AnimatedSprite2D:scale=true
 TileMap:scale=true
 Sprite2D:scale=true
 MultiNodeEdit:scale=true
+RigidBody2D:scale=true
+CollisionPolygon2D:scale=true
+GPUParticles2D:scale=true
 
 [dialog_bounds]
 
