--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([24]),
+"column": 16,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 88,
-"scroll_position": 75.0,
+"row": 25,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -45,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
