--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://TestScene.tscn", "res://PlayerRelated/Player.tscn", "res://PlayerRelated/knife/Knife.tscn", "res://Ennemies/TestEnnemy.tscn", "res://tilemap.res")
-current_scene="res://TestScene.tscn"
-center_split_offset=-214
+current_scene="res://PlayerRelated/Player.tscn"
+center_split_offset=-175
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd", "res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
 selected_script="res://PlayerRelated/Player/Scripts/PlayerMovement.gd"
-open_help=[]
+open_help=["CollisionShape2D", "PhysicsBody2D"]
 script_split_offset=52
 list_split_offset=0
 
