--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,24 +20,24 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://TestScene.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/", "res://PlayerRelated/Player/", "res://PlayerRelated/Player/Sprites/", "res://PlayerRelated/Player/Scripts/", "res://PlayerRelated/knife/", "res://Ennemies/", "res://BaseEntity/Hitbox/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/Player/", "res://Levels/Map1/", "res://BaseEntity/Hitbox/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://TestScene.tscn", "res://PlayerRelated/Player.tscn", "res://PlayerRelated/knife/Knife.tscn", "res://Ennemies/TestEnnemy.tscn", "res://tilemap.res")
-current_scene="res://PlayerRelated/Player.tscn"
+open_scenes=PackedStringArray("res://TestScene.tscn", "res://Levels/Map1/Map1.tscn")
+current_scene="res://TestScene.tscn"
 center_split_offset=-175
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd", "res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
-selected_script="res://PlayerRelated/Player/Scripts/PlayerMovement.gd"
+selected_script="res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd"
 open_help=["CollisionShape2D", "PhysicsBody2D"]
 script_split_offset=52
 list_split_offset=0
