--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://TestScene.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/Player/", "res://Levels/Map1/", "res://BaseEntity/Hitbox/")
+dock_filesystem_selected_paths=PackedStringArray("res://PlayerRelated/knife/Knife.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/Player/", "res://PlayerRelated/knife/", "res://Levels/Map1/", "res://BaseEntity/Hitbox/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://TestScene.tscn", "res://Levels/Map1/Map1.tscn")
-current_scene="res://TestScene.tscn"
+open_scenes=PackedStringArray("res://Items/Mag_hat_power_up.tscn", "res://TestScene.tscn", "res://PlayerRelated/Player.tscn", "res://PlayerRelated/knife/Knife.tscn")
+current_scene="res://PlayerRelated/knife/Knife.tscn"
 center_split_offset=-175
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd", "res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
-selected_script="res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd"
+open_scripts=["res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd", "res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://Items/Mag_hat_power_up.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
+selected_script="res://PlayerRelated/knife/Knife.gd"
 open_help=["CollisionShape2D", "PhysicsBody2D"]
 script_split_offset=52
 list_split_offset=0
