--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://PlayerRelated/knife/Knife.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://PlayerRelated/Player/", "res://PlayerRelated/knife/", "res://Levels/Map1/", "res://BaseEntity/Hitbox/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/TestScene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Items/Mag_hat_power_up.tscn", "res://TestScene.tscn", "res://PlayerRelated/Player.tscn", "res://PlayerRelated/knife/Knife.tscn")
-current_scene="res://PlayerRelated/knife/Knife.tscn"
+open_scenes=PackedStringArray("res://temp.tscn", "res://Characters/Ennemies/TestEnnemy.tscn", "res://Items/Mag_hat_power_up.tscn", "res://Projectiles/Knife.tscn", "res://Scenes/TestScene.tscn")
+current_scene="res://Scenes/TestScene.tscn"
 center_split_offset=-175
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd", "res://BaseEntity/Hitbox/Hitbox.gd", "res://PlayerRelated/knife/Knife.gd", "res://Items/Mag_hat_power_up.gd", "res://PlayerRelated/Player/Scripts/PlayerMovement.gd"]
-selected_script="res://PlayerRelated/knife/Knife.gd"
+open_scripts=["res://Characters/Ennemies/Ennemy_script.gd", "res://_Deprecated/BaseEntity/Hitbox/Hitbox.gd", "res://Projectiles/Knife.gd", "res://Items/Mag_hat_power_up.gd", "res://Characters/Player/PlayerMovement.gd"]
+selected_script="res://Characters/Player/PlayerMovement.gd"
 open_help=["CollisionShape2D", "PhysicsBody2D"]
 script_split_offset=52
 list_split_offset=0
