--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,32 +1,18 @@
-[res://PlayerRelated/Player/Scripts/PlayerMovement.gd]
+[res://Items/Mag_hat_power_up.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 93,
-"scroll_position": 84.0,
+"row": 6,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://PlayerRelated/knife/Knife.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 13,
-"scroll_position": 1.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://BaseEntity/Hitbox/Hitbox.gd]
+[res://_Deprecated/BaseEntity/Hitbox/Hitbox.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -40,7 +26,21 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Ennemies/BaseEnnemy/BaseEnnemyPreset.gd]
+[res://Characters/Player/PlayerMovement.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 71,
+"scroll_position": 60.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Ennemies/BaseEnnemy/BaseEnnemyPreset.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -54,15 +54,29 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Items/Mag_hat_power_up.gd]
+[res://Projectiles/Knife.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 12,
+"scroll_position": 1.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Ennemies/Ennemy_script.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
