feat: stat modifying hat + ennemy health

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,25 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"Abstract_character",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Abstract_character.gd"
+}, {
+"base": &"Marker2D",
+"class": &"HatManager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Characters/Player/Scripts/HatManager.gd"
+}, {
+"base": &"RefCounted",
+"class": &"Hat_data",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Items/Hat_power_ups/Data_objects/Hat_data.gd"
+}, {
+"base": &"RefCounted",
+"class": &"Hat_effect",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Items/Hat_power_ups/Data_objects/Hat_effect.gd"
+}])
