--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,17 +1,3 @@
-[res://Items/Mag_hat_power_up.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://_Deprecated/BaseEntity/Hitbox/Hitbox.gd]
 
 state={
@@ -26,35 +12,49 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Characters/Player/PlayerMovement.gd]
+[res://Characters/Ennemies/Ennemy_script.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 93,
-"scroll_position": 89.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Characters/Ennemies/BaseEnnemy/BaseEnnemyPreset.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 3,
+"row": 16,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Projectiles/Knife.gd]
+[res://Projectiles/Player/Knife.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Abstract_character.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Items/Pickup_factory.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -62,22 +62,86 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 1.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Characters/Ennemies/Ennemy_script.gd]
+[res://Items/Hat_power_ups/Hat_power_up.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 17,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Items/Hat_power_ups/Data_objects/Hat_data.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Items/Hat_power_ups/Data_objects/Hat_effect.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 21,
+"selection_to_line": 0,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Player/Scripts/HatManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 34,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 14.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 22,
+"selection_to_column": 34,
+"selection_to_line": 22,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Characters/Player/Scripts/PlayerScript.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 108,
+"scroll_position": 94.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
