--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/TestScene.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Projectiles/Player/", "res://Characters/Ennemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://Items/Hat_power_ups/Hat_sprites/tricorn.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Projectiles/Player/", "res://Items/", "res://Items/Hat_power_ups/", "res://Items/Hat_power_ups/Hat_sprites/", "res://Characters/Ennemies/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Characters/Player/Player.tscn", "res://Scenes/TestScene.tscn", "res://Characters/Ennemies/TestEnnemy.tscn")
-current_scene="res://Scenes/TestScene.tscn"
+open_scenes=PackedStringArray("res://Characters/Player/Player.tscn", "res://Scenes/TestScene.tscn", "res://Items/Hat_power_ups/Hat_power_up.tscn")
+current_scene="res://Items/Hat_power_ups/Hat_power_up.tscn"
 center_split_offset=-175
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Characters/Abstract_character.gd", "res://Characters/Ennemies/Ennemy_script.gd"]
-selected_script="res://Characters/Ennemies/Ennemy_script.gd"
+open_scripts=["res://Characters/Abstract_character.gd", "res://Characters/Ennemies/Ennemy_script.gd", "res://Characters/Player/Scripts/HatManager.gd", "res://Items/Hat_power_ups/Data_objects/Hat_data.gd", "res://Items/Hat_power_ups/Hat_power_up.gd", "res://Characters/Player/Scripts/PlayerScript.gd"]
+selected_script="res://Items/Hat_power_ups/Hat_power_up.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
