--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Characters/Player/Player.tscn", "res://Scenes/TestScene.tscn", "res://Items/Hat_power_ups/Hat_power_up.tscn")
-current_scene="res://Items/Hat_power_ups/Hat_power_up.tscn"
+open_scenes=PackedStringArray("res://Characters/Player/Player.tscn", "res://Scenes/TestScene.tscn")
+current_scene="res://Characters/Player/Player.tscn"
 center_split_offset=-175
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
