--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Items/Hat_power_ups/Hat_sprites/tricorn.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Projectiles/Player/", "res://Items/", "res://Items/Hat_power_ups/", "res://Items/Hat_power_ups/Hat_sprites/", "res://Characters/Ennemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://bg.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Projectiles/Player/", "res://Items/Hat_power_ups/Hat_sprites/", "res://Characters/Ennemies/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Characters/Abstract_character.gd", "res://Characters/Ennemies/Ennemy_script.gd", "res://Characters/Player/Scripts/HatManager.gd", "res://Items/Hat_power_ups/Data_objects/Hat_data.gd", "res://Items/Hat_power_ups/Hat_power_up.gd", "res://Characters/Player/Scripts/PlayerScript.gd"]
-selected_script="res://Items/Hat_power_ups/Hat_power_up.gd"
+selected_script="res://Characters/Player/Scripts/PlayerScript.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
